err/automium-web.err
Listing '.'...
Listing './bin'...
Compiling './bin/automium_web_pypi.py'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/Flask-0.12.2.dist-info'...
Listing './lib/python3.5/site-packages/Jinja2-2.10.dist-info'...
Listing './lib/python3.5/site-packages/MarkupSafe-1.0.egg-info'...
Listing './lib/python3.5/site-packages/Werkzeug-0.14.1.dist-info'...
Listing './lib/python3.5/site-packages/atm'...
Listing './lib/python3.5/site-packages/automium-0.2.6.egg-info'...
Listing './lib/python3.5/site-packages/automium_web-0.1.1.egg-info'...
Listing './lib/python3.5/site-packages/click'...
Listing './lib/python3.5/site-packages/click-6.7.dist-info'...
Listing './lib/python3.5/site-packages/flask'...
Listing './lib/python3.5/site-packages/flask/ext'...
Listing './lib/python3.5/site-packages/itsdangerous-0.24.egg-info'...
Listing './lib/python3.5/site-packages/jinja2'...
Compiling './lib/python3.5/site-packages/jinja2/asyncfilters.py'...
***   File "./lib/python3.5/site-packages/jinja2/asyncfilters.py", line 24
    yield item
    ^
SyntaxError: 'yield' inside async function

Compiling './lib/python3.5/site-packages/jinja2/asyncsupport.py'...
***   File "./lib/python3.5/site-packages/jinja2/asyncsupport.py", line 35
    yield event
    ^
SyntaxError: 'yield' inside async function

Listing './lib/python3.5/site-packages/legacy-0.1.6.dist-info'...
Listing './lib/python3.5/site-packages/markupsafe'...
Listing './lib/python3.5/site-packages/models'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/quorum'...
Compiling './lib/python3.5/site-packages/quorum/daemon.py'...
***   File "./lib/python3.5/site-packages/quorum/daemon.py", line 108
    except OSError, error:
                  ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/quorum/error.py'...
***   File "./lib/python3.5/site-packages/quorum/error.py", line 51
    except exceptions.ValidationError, error:
                                     ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/quorum/execution.py'...
***   File "./lib/python3.5/site-packages/quorum/execution.py", line 130
    except BaseException, exception:
                        ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/quorum/validation.py'...
***   File "./lib/python3.5/site-packages/quorum/validation.py", line 91
    except exceptions.ValidationInternalError, error:
                                             ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './lib/python3.5/site-packages/views'...
Listing './lib/python3.5/site-packages/views/web'...
Compiling './lib/python3.5/site-packages/views/web/project.py'...
***   File "./lib/python3.5/site-packages/views/web/project.py", line 80
    except quorum.ValidationError, error:
                                 ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/werkzeug'...
Listing './lib/python3.5/site-packages/werkzeug/contrib'...
Listing './lib/python3.5/site-packages/werkzeug/debug'...
Listing './lib/python3.5/site-packages/werkzeug/debug/shared'...
Listing './projects'...
Listing './share'...
Listing './share/python-wheels'...
Listing './static'...
Listing './static/css'...
Listing './static/images'...
Listing './static/js'...
Listing './static/libs'...
Listing './static/libs/layout'...
Listing './static/libs/layout/css'...
Listing './static/libs/layout/images'...
Listing './static/libs/layout/js'...
Listing './static/libs/uxf'...
Listing './static/libs/uxf/css'...
Listing './static/libs/uxf/images'...
Listing './static/libs/uxf/js'...
Listing './templates'...
Listing './templates/partials'...
